
 * Correct condition on summary page lists blank slate (rmarianski)

 * Textarea borders should be focused orange instead of lime (rmarianski)

 * remove oc-getstarted div around adding a mailing list for aesthetic reasons
   (rmarianski)

 * add link on home page news header to news page (rmarianski)

 * uncomment getting started section of home page (rmarianski)


0.12.0 (2008-07-11)
===================

 * New form for deleting accounts (not linked to from anywhere yet,
   you have to visit people/foo/delete) (slinkp) (trac feature #2223)

 * Zip file export view of project wiki pages (not linked to from
   anywhere yet, you have to visit projects/foo/project-wiki-export.zip)
   (slinkp)

 * Fixed #2010: Project contents form should use POST, not GET (slinkp)

 * Email obfuscation for listen views (cabraham)

 * Rig in listen message_macros templates (rmarianski)

 * fix team AttributeError reported by user on summary page (rmarianski)

 * fix site_url AttributeError reported by user on password reset (rmarianski)

 * revert changes to login in current thread due to side effects (rmarianski)

 * reindex member project_ids when joining/leaving project (rmarianski)

 * lookup path to images dynamically to allow for overrides (rmarianski)

 * fix user reported UnboundLocalError on pending page (rmarianski)

 * possibly resolve user reported error on attachment delete (rmarianski)


0.11.2 (2008-05-27)
===================
 * Square member portrait thumbnails at (80,80) and (50,50) (rmarianski)
 * Square project logos at (80,80) and (50,50) (rmarianski)

0.11.1 (2008-05-20)
=================

 * New infrastructure for embedded host whitelist; add some sites (jhammel)

 * Allow for wicked links with HTML escapes and non-UTF-8 characters (jhammel)

 * Fix "wiki" link and text in user's dropdown nav - it's now "pages" (slinkp)

 * Highlight correct topnav tab on user profile (rmarianski, jhammel)

 * Display topnav tabs on news items (rmarianski)
